#2 - initialize and publish CLI commands (#5)

--- a/templates/javascript/Dockerfile
+++ b/templates/javascript/Dockerfile
@@ -6,15 +6,15 @@ RUN apt-get update && \
     apt-get upgrade -y && \
     rm -rf /var/lib/apt/lists/*
 
+COPY package.json ./
+
+RUN npm install
+
 RUN addgroup --gid 1001 --system app && \
     adduser --no-create-home --shell /bin/false --disabled-password --uid 1001 --system --group app
 
 USER app
 
-#COPY package.json .
-
-COPY package.json *.js ./
-
-RUN npm install || true
+COPY *.js ./
 
 ENTRYPOINT ["node", "main.js"]
