--- a/functionary/requirements.txt
+++ b/functionary/requirements.txt
@@ -8,6 +8,8 @@ amqp==5.1.1
     # via kombu
 asgiref==3.5.2
     # via django
+async-timeout==4.0.2
+    # via redis
 attrs==22.1.0
     # via jsonschema
 billiard==3.6.4.0
@@ -30,6 +32,8 @@ click-plugins==1.1.1
     # via celery
 click-repl==0.2.0
     # via celery
+deprecated==1.2.13
+    # via redis
 django==4.0.6
     # via
     #   -r requirements.in
@@ -54,8 +58,12 @@ jsonschema==4.8.0
     # via drf-spectacular
 kombu==5.2.4
     # via celery
+packaging==21.3
+    # via redis
 prompt-toolkit==3.0.30
     # via click-repl
+pyparsing==3.0.9
+    # via packaging
 pyrsistent==0.18.1
     # via jsonschema
 pytz==2022.1
@@ -66,6 +74,8 @@ pyyaml==6.0
     # via
     #   -r requirements.in
     #   drf-spectacular
+redis==4.3.4
+    # via -r requirements.in
 requests==2.28.1
     # via docker
 six==1.16.0
@@ -85,3 +95,5 @@ wcwidth==0.2.5
     # via prompt-toolkit
 websocket-client==1.3.3
     # via docker
+wrapt==1.14.1
+    # via deprecated
