--- a/functionary/requirements.txt
+++ b/functionary/requirements.txt
@@ -55,13 +55,17 @@ idna==3.3
 inflection==0.5.1
     # via drf-spectacular
 jsonschema==4.8.0
-    # via drf-spectacular
+    # via
+    #   -r requirements.in
+    #   drf-spectacular
 kombu==5.2.4
     # via celery
 packaging==21.3
     # via redis
 prompt-toolkit==3.0.30
     # via click-repl
+pydantic==1.9.1
+    # via -r requirements.in
 pyparsing==3.0.9
     # via packaging
 pyrsistent==0.18.1
@@ -82,6 +86,8 @@ six==1.16.0
     # via click-repl
 sqlparse==0.4.2
     # via django
+typing-extensions==4.3.0
+    # via pydantic
 uritemplate==4.1.1
     # via drf-spectacular
 urllib3==1.26.11
