--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,56 +1,12 @@
 version: "3.5"
 
-x-environment: &environment
-  PYTHONDONTWRITEBYTECODE: 1
-  PYTHONUNBUFFERED: 1
-  PYTHONBREAKPOINT: remote_pdb.set_trace
-  REMOTE_PDB_HOST: 0.0.0.0
-
 services:
-  runner:
-    image: plugin_runner:latest
-    container_name: runner
-    environment:
-      <<: *environment
-      REMOTE_PDB_PORT: 3333
-      RABBITMQ_HOST: rabbitmq
-      RABBITMQ_PORT: 5672
-      RABBITMQ_USER: bugsbunny
-      RABBITMQ_PASSWORD: wascallywabbit
-    ports:
-      - 3333:3333
-    networks:
-      - proto-network
-    volumes:
-      - $PROJECT_HOME/bgproto/runner:/opt/runner/app
-      - /var/run/docker.sock:/var/run/docker.sock
-    depends_on:
-      - rabbitmq
-      - redis
-      - registry
-  worker:
-    image: plugin_runner:latest
-    command: worker
-    container_name: worker
-    environment:
-      <<: *environment
-      REMOTE_PDB_PORT: 4444
-      REGISTRY: "localhost:5000"
-    ports:
-      - 4444:4444
-    networks:
-      - proto-network
-    volumes:
-      - $PROJECT_HOME/bgproto/runner:/opt/runner/app
-      - /var/run/docker.sock:/var/run/docker.sock
-    depends_on:
-      - redis
   rabbitmq:
     image: rabbitmq:management
     container_name: rabbitmq
     environment:
-      RABBITMQ_DEFAULT_USER: bugsbunny
-      RABBITMQ_DEFAULT_PASS: wascallywabbit
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER:-bugs}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULTPASS:-wascallywabbit}
     networks:
       - proto-network
     ports:
@@ -59,7 +15,7 @@ services:
       - 15671:15671
       - 15672:15672
     volumes:
-      - rabbitmq-home:/var/lib/rabbitmq
+      - rabbitmq-data:/var/lib/rabbitmq
   redis:
     image: redis:latest
     container_name: redis
@@ -67,6 +23,8 @@ services:
       - proto-network
     ports:
       - 6379:6379
+    volumes:
+      - redis-data:/data
   registry:
     image: registry:2
     container_name: registry
@@ -74,6 +32,8 @@ services:
       - proto-network
     ports:
       - 5000:5000
+    volumes:
+      - registry-data:/var/lib/registry
 
 networks:
   proto-network:
@@ -81,4 +41,6 @@ networks:
     name: proto-network
 
 volumes:
-  rabbitmq-home:
+  rabbitmq-data:
+  redis-data:
+  registry-data:
