--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -34,8 +34,12 @@ jobs:
           linters: flake8
           run: flake8
 
+
   isort:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        component: [functionary, cli, runner]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -44,12 +48,12 @@ jobs:
         with:
           python-version: "3.10"
       - run: python -m pip install isort
-      - name: isort
+      - name: isort ${{ matrix.component }}
         # Adds annotations to PRs
         uses: liskin/gh-problem-matcher-wrap@v1
         with:
           linters: isort
-          run: isort --check --diff --resolve-all-configs .
+          run: isort --check --diff ${{ matrix.component }}
 
   black:
     runs-on: ubuntu-latest
