--- a/cli/requirements.txt
+++ b/cli/requirements.txt
@@ -10,13 +10,19 @@ charset-normalizer==2.1.1
     # via requests
 click==8.1.3
     # via functionary (setup.py)
+commonmark==0.9.1
+    # via rich
 idna==3.3
     # via requests
+pygments==2.13.0
+    # via rich
 python-dotenv==0.20.0
     # via functionary (setup.py)
 pyyaml==6.0
     # via functionary (setup.py)
 requests==2.28.1
+    # via functionary (setup.py)
+rich==12.5.1
     # via functionary (setup.py)
 urllib3==1.26.12
     # via requests
