--- a/functionary/requirements.txt
+++ b/functionary/requirements.txt
@@ -12,8 +12,12 @@ async-timeout==4.0.2
     # via redis
 attrs==22.1.0
     # via jsonschema
+beautifulsoup4==4.11.1
+    # via django-unicorn
 billiard==3.6.4.0
     # via celery
+cachetools==4.2.4
+    # via django-unicorn
 celery==5.2.7
     # via -r requirements.in
 certifi==2022.6.15
@@ -32,14 +36,19 @@ click-plugins==1.1.1
     # via celery
 click-repl==0.2.0
     # via celery
+decorator==4.4.2
+    # via django-unicorn
 deprecated==1.2.13
     # via redis
 django==4.1
     # via
     #   -r requirements.in
+    #   django-unicorn
     #   djangorestframework
     #   drf-spectacular
     #   drf-spectacular-sidecar
+django-unicorn==0.47.0
+    # via -r requirements.in
 djangorestframework==3.13.1
     # via
     #   -r requirements.in
@@ -60,6 +69,8 @@ jsonschema==4.14.0
     #   drf-spectacular
 kombu==5.2.4
     # via celery
+orjson==3.8.0
+    # via django-unicorn
 packaging==21.3
     # via
     #   docker
@@ -86,8 +97,12 @@ redis==4.3.4
     # via -r requirements.in
 requests==2.28.1
     # via docker
+shortuuid==1.0.9
+    # via django-unicorn
 six==1.16.0
     # via click-repl
+soupsieve==2.3.2.post1
+    # via beautifulsoup4
 sqlparse==0.4.2
     # via django
 typing-extensions==4.3.0
