--- a/functionary/.vscode/launch.json
+++ b/functionary/.vscode/launch.json
@@ -22,6 +22,22 @@
       "justMyCode": true
     },
     {
+      "name": "run_listener",
+      "type": "python",
+      "request": "launch",
+      "preLaunchTask": "listener_stop_container",
+      "program": "${workspaceFolder}/manage.py",
+      "args": ["run_listener"],
+      "env": {
+        "DEBUG": "TRUE",
+        "LOG_LEVEL": "DEBUG",
+        "RABBITMQ_USER": "bugs",
+        "RABBITMQ_PASSWORD": "wascallywabbit"
+      },
+      "django": true,
+      "justMyCode": true
+    },
+    {
       "name": "run_worker",
       "type": "python",
       "request": "launch",
