--- a/functionary/.vscode/tasks.json
+++ b/functionary/.vscode/tasks.json
@@ -10,6 +10,12 @@
       "hide": true
     },
     {
+      "label": "listener_stop_container",
+      "type": "shell",
+      "command": "docker stop functionary-listener",
+      "hide": true
+    },
+    {
       "label": "worker_stop_container",
       "type": "shell",
       "command": "docker stop functionary-worker",
