--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,6 +10,9 @@ x-environment:
   RABBITMQ_PASSWORD: ${RABBITMQ_PASSWORD:-wascallywabbit}
   RABBITMQ_HOST: rabbitmq
   REDIS_HOST: redis
+  REGISTRY_HOST: registry
+  REGISTRY_PORT: 5000
+  DOCKER_HOST: unix:///home/functionary/podman.sock
   DB_ENGINE: POSTGRESQL
   DB_HOST: postgresql
   DB_NAME: functionary
@@ -21,13 +24,13 @@ services:
   django:
     build:
       context: ../functionary
-      dockerfile: ../docker/debug.Dockerfile
+      dockerfile: ../docker/functionary.Dockerfile
     image: functionary_django
     container_name: functionary-django
     environment:
       <<: *environment
-      DEBUG_PORT: 5678
-      DEBUG_CMD: manage.py runserver 0.0.0.0:8000
+      APP: SERVER
+      APP_PORT: 5678
       WAIT_FOR_CLIENT: ${DJANGO_WAIT_FOR_CLIENT:-}
     networks:
       - functionary-network
@@ -59,13 +62,13 @@ services:
   listener:
     build:
       context: ../functionary
-      dockerfile: ../docker/debug.Dockerfile
+      dockerfile: ../docker/functionary.Dockerfile
     image: functionary_django
     container_name: functionary-listener
     environment:
       <<: *environment
-      DEBUG_PORT: 5683
-      DEBUG_CMD: "./manage.py run_listener"
+      APP: LISTENER
+      APP_PORT: 5683
       WAIT_FOR_CLIENT: ${WORKER_WAIT_FOR_CLIENT:-}
     networks:
       - functionary-network
@@ -79,13 +82,13 @@ services:
   worker:
     build:
       context: ../functionary
-      dockerfile: ../docker/debug.Dockerfile
+      dockerfile: ../docker/functionary.Dockerfile
     image: functionary_django
     container_name: functionary-worker
     environment:
       <<: *environment
-      DEBUG_PORT: 5679
-      DEBUG_CMD: "./manage.py run_worker"
+      APP: WORKER
+      APP_PORT: 5679
       WAIT_FOR_CLIENT: ${WORKER_WAIT_FOR_CLIENT:-}
     networks:
       - functionary-network
@@ -99,13 +102,22 @@ services:
   build-worker:
     build:
       context: ../functionary
-      dockerfile: ../docker/debug.Dockerfile
-    image: functionary_django
+      dockerfile: ../docker/podman.Dockerfile
+    image: functionary_podman_django
     container_name: functionary-build-worker
+    cap_add:
+      - SYS_ADMIN
+      - MKNOD
+    devices:
+      - "/dev/fuse:/dev/fuse"
+    security_opt:
+      - label:disable
+      - seccomp:unconfined
+      - apparmor:unconfined
     environment:
       <<: *environment
-      DEBUG_PORT: 5680
-      DEBUG_CMD: "./manage.py run_build_worker"
+      APP: BUILD_WORKER
+      APP_PORT: 5680
       WAIT_FOR_CLIENT: ${BUILD_WORKER_WAIT_FOR_CLIENT:-}
     networks:
       - functionary-network
@@ -113,20 +125,22 @@ services:
       - 5680:5680
     volumes:
       - ../functionary:/app
-      - /var/run/docker.sock:/var/run/docker.sock
+      - ../templates:/app/templates
+      - ../docker/registries.conf:/home/functionary/.config/containers/registries.conf:ro
+      - podman:/var/lib/containers
     depends_on:
       - rabbitmq
       - redis
   runner-listener:
     build:
       context: ../runner
-      dockerfile: ../docker/debug.Dockerfile
+      dockerfile: ../docker/functionary.Dockerfile
     image: functionary_runner
     container_name: functionary-runner-listener
     environment:
       <<: *environment
-      DEBUG_PORT: 5681
-      DEBUG_CMD: "./listener.py"
+      APP: LISTENER
+      APP_PORT: 5681
       WAIT_FOR_CLIENT: ${RUNNER_LISTENER_WAIT_FOR_CLIENT:-}
     networks:
       - functionary-network
@@ -140,21 +154,31 @@ services:
   runner-worker:
     build:
       context: ../runner
-      dockerfile: ../docker/debug.Dockerfile
-    image: functionary_runner
+      dockerfile: ../docker/podman.Dockerfile
+    image: functionary_podman_runner
     container_name: functionary-runner-worker
     environment:
       <<: *environment
-      DEBUG_PORT: 5682
-      DEBUG_CMD: "./worker.py"
+      APP: WORKER
+      APP_PORT: 5682
       WAIT_FOR_CLIENT: ${RUNNER_WORKER_WAIT_FOR_CLIENT:-}
+    cap_add:
+      - SYS_ADMIN
+      - MKNOD
+    devices:
+      - "/dev/fuse:/dev/fuse"
+    security_opt:
+      - label:disable
+      - seccomp:unconfined
+      - apparmor:unconfined
     networks:
       - functionary-network
     ports:
       - 5682:5682
     volumes:
       - ../runner:/app
-      - /var/run/docker.sock:/var/run/docker.sock
+      - ../docker/registries.conf:/home/functionary/.config/containers/registries.conf:ro
+      - podman:/var/lib/containers
     depends_on:
       - rabbitmq
       - redis
@@ -204,4 +228,5 @@ volumes:
   rabbitmq-data:
   redis-data:
   registry-data:
+  podman:
   postgresql-data:
