--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,9 @@
 [flake8]
 max-line-length = 88
 exclude = functionary/*/migrations/*
+per-file-ignores =
+    # star imported variables may be undefined
+    functionary/functionary/*.py: F405,
 
 [isort]
 profile = black
