--- a/functionary/requirements-dev.txt
+++ b/functionary/requirements-dev.txt
@@ -4,8 +4,11 @@
 #
 #    pip-compile requirements-dev.in
 #
-
-black==22.6.0
+asgiref==3.5.2
+    # via
+    #   -c requirements.txt
+    #   django
+black==22.8.0
     # via -r requirements-dev.in
 click==8.1.3
     # via
@@ -14,11 +17,17 @@ click==8.1.3
     #   djlint
 colorama==0.4.5
     # via djlint
-coverage==6.4.4
+coverage==6.5.0
     # via -r requirements-dev.in
 cssbeautifier==1.14.6
     # via djlint
-djlint==1.12.3
+django==4.1.1
+    # via
+    #   -c requirements.txt
+    #   django-debug-toolbar
+django-debug-toolbar==3.7.0
+    # via -r requirements-dev.in
+djlint==1.18.0
     # via -r requirements-dev.in
 editorconfig==0.12.3
     # via
@@ -30,7 +39,7 @@ html-tag-names==0.1.2
     # via djlint
 html-void-elements==0.1.0
     # via djlint
-importlib-metadata==4.12.0
+importlib-metadata==4.13.0
     # via djlint
 isort==5.10.1
     # via -r requirements-dev.in
@@ -56,13 +65,18 @@ pyyaml==6.0
     # via
     #   -c requirements.txt
     #   djlint
-regex==2022.8.17
+regex==2022.9.13
     # via djlint
 six==1.16.0
     # via
     #   -c requirements.txt
     #   cssbeautifier
     #   jsbeautifier
+sqlparse==0.4.3
+    # via
+    #   -c requirements.txt
+    #   django
+    #   django-debug-toolbar
 tomli==2.0.1
     # via
     #   black
