--- a/runner/.vscode/launch.json
+++ b/runner/.vscode/launch.json
@@ -10,11 +10,7 @@
       "request": "launch",
       "preLaunchTask": "listener_stop_container",
       "program": "${workspaceFolder}/listener.py",
-      "env": {
-        "LOG_LEVEL": "DEBUG",
-        "RABBITMQ_USER": "bugs",
-        "RABBITMQ_PASSWORD": "wascallywabbit"
-      },
+      "envFile": "${workspaceFolder}/.vscode/.debug.env",
       "justMyCode": true
     },
     {
@@ -23,11 +19,7 @@
       "request": "launch",
       "preLaunchTask": "worker_stop_container",
       "program": "${workspaceFolder}/worker.py",
-      "env": {
-        "LOG_LEVEL": "DEBUG",
-        "RABBITMQ_USER": "bugs",
-        "RABBITMQ_PASSWORD": "wascallywabbit"
-      },
+      "envFile": "${workspaceFolder}/.vscode/.debug.env",
       "justMyCode": true
     }
   ]
