#90 - Combination of worker and listener into one entity

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -117,41 +117,21 @@ services:
     depends_on:
       - rabbitmq
       - redis
-  runner-listener:
+  runner:
     build:
       context: ../runner
       dockerfile: ../docker/debug.Dockerfile
     image: functionary_runner
-    container_name: functionary-runner-listener
+    container_name: functionary-runner
     environment:
       <<: *environment
       DEBUG_PORT: 5681
-      DEBUG_CMD: "./listener.py"
+      DEBUG_CMD: "./runner.py"
       WAIT_FOR_CLIENT: ${RUNNER_LISTENER_WAIT_FOR_CLIENT:-}
     networks:
       - functionary-network
     ports:
       - 5681:5681
-    volumes:
-      - ../runner:/app
-    depends_on:
-      - rabbitmq
-      - redis
-  runner-worker:
-    build:
-      context: ../runner
-      dockerfile: ../docker/debug.Dockerfile
-    image: functionary_runner
-    container_name: functionary-runner-worker
-    environment:
-      <<: *environment
-      DEBUG_PORT: 5682
-      DEBUG_CMD: "./worker.py"
-      WAIT_FOR_CLIENT: ${RUNNER_WORKER_WAIT_FOR_CLIENT:-}
-    networks:
-      - functionary-network
-    ports:
-      - 5682:5682
     volumes:
       - ../runner:/app
       - /var/run/docker.sock:/var/run/docker.sock
