#79 - Added additional fixture data (#100)

--- a/functionary/core/fixtures/bootstrap.yaml
+++ b/functionary/core/fixtures/bootstrap.yaml
@@ -1,33 +1,129 @@
+- model: core.environment
+  pk: 2d113b21-bf1f-4c74-ba12-e37d8f34b72a
+  fields:
+    name: prod
+    team: 29f146e9-4fd0-4cd1-b02d-68c75679c144
+    default: false
+- model: core.environment
+  pk: 3764e110-2e14-4ab6-a8be-ee7b5b6345d6
+  fields:
+    name: dev
+    team: 29f146e9-4fd0-4cd1-b02d-68c75679c144
+    default: true
+- model: core.environment
+  pk: 9b999837-9de0-451f-8875-d8da5936b271
+  fields:
+    name: default
+    team: 87bce48d-529a-4578-bbea-fd96d1de91f4
+    default: true
+- model: core.team
+  pk: 29f146e9-4fd0-4cd1-b02d-68c75679c144
+  fields:
+    name: FunctionFoundry
+- model: core.team
+  pk: 87bce48d-529a-4578-bbea-fd96d1de91f4
+  fields:
+    name: ScriptSanctuary
 - model: core.user
   pk: 1
   fields:
     username: admin
-    password: pbkdf2_sha256$390000$K5yDcPRbjMUBEdLLXEstNK$k0ztbdLDFsN6Q6DgCOXH1wVpzpT1+FXIJw44X55AiuU=  #admin
+    password: pbkdf2_sha256$390000$K5yDcPRbjMUBEdLLXEstNK$k0ztbdLDFsN6Q6DgCOXH1wVpzpT1+FXIJw44X55AiuU= # admin
     first_name: ""
     last_name: ""
     email: ""
     is_active: true
-    created_at: "2022-09-23T14:45:53.705Z"
+    last_login: null
+    created_at: 2022-09-23 14:45:53.705000+00:00
     is_staff: true
     is_superuser: true
     groups: []
     user_permissions: []
-
-- model: core.team
-  pk: 29f146e9-4fd0-4cd1-b02d-68c75679c144
+- model: core.user
+  pk: 2
   fields:
-    name: Admin
-
-- model: core.environment
-  pk: 3764e110-2e14-4ab6-a8be-ee7b5b6345d6
+    username: ff-admin
+    password: pbkdf2_sha256$390000$iQENJqHVQKpued6uiIlFzt$B0VEeU8iT6eZ9c/nL/2kxFP9vAtPhzNBY0BUTgwyOAM= # ff-admin
+    first_name: Sam
+    last_name: Administrator
+    email: ""
+    is_active: true
+    last_login: null
+    created_at: 2022-10-13 03:23:36.842002+00:00
+    is_staff: false
+    is_superuser: false
+    groups: []
+    user_permissions: []
+- model: core.user
+  pk: 3
   fields:
-    name: default
+    username: ff-developer
+    password: pbkdf2_sha256$390000$Ln0I2w7hZPWvhuOeBx8YZP$jYjOru8pfnvbrh6WKiyUjeRFX6gfGMDGBk+xOIbmTX4= # ff-developer
+    first_name: Joe
+    last_name: Developer
+    email: ""
+    is_active: true
+    last_login: null
+    created_at: 2022-10-13 03:24:08.235549+00:00
+    is_staff: false
+    is_superuser: false
+    groups: []
+    user_permissions: []
+- model: core.user
+  pk: 4
+  fields:
+    username: ff-operator
+    password: pbkdf2_sha256$390000$bz4pPoESJWGPxxyif3wcCT$gBt1ULCzDFx1Cm1wviODIYJzBSZ1nGfLH9KjgWV0/FM= # ff-operator
+    first_name: Jane
+    last_name: Operator
+    email: ""
+    is_active: true
+    last_login: null
+    created_at: 2022-10-13 03:24:28.528741+00:00
+    is_staff: false
+    is_superuser: false
+    groups: []
+    user_permissions: []
+- model: core.user
+  pk: 5
+  fields:
+    username: ff-readonly
+    password: pbkdf2_sha256$390000$rdJdNLYRBpUG1cTFRcT3a3$7Ct7bOn+P5YRQ+zC8iJvtb8xcIjLbovQfTf4yfDha50= # ff-readonly
+    first_name: Mike
+    last_name: Readonly
+    email: ""
+    is_active: true
+    last_login: null
+    created_at: 2022-10-13 03:24:59.841908+00:00
+    is_staff: false
+    is_superuser: false
+    groups: []
+    user_permissions: []
+- model: core.teamuserrole
+  pk: 1
+  fields:
+    user: 2
+    role: ADMIN
+    updated_at: 2022-10-13 03:25:11.945677+00:00
     team: 29f146e9-4fd0-4cd1-b02d-68c75679c144
-    default: true
-
-- model: core.environment
-  pk: 2d113b21-bf1f-4c74-ba12-e37d8f34b72a
+- model: core.teamuserrole
+  pk: 2
   fields:
-    name: Admin
+    user: 5
+    role: READ_ONLY
+    updated_at: 2022-10-13 03:25:22.561696+00:00
     team: 29f146e9-4fd0-4cd1-b02d-68c75679c144
-    default: false
+- model: core.environmentuserrole
+  pk: 1
+  fields:
+    user: 3
+    role: DEVELOPER
+    updated_at: 2022-10-13 03:25:47.438761+00:00
+    environment: 3764e110-2e14-4ab6-a8be-ee7b5b6345d6
+- model: core.environmentuserrole
+  pk: 2
+  fields:
+    user: 4
+    role: OPERATOR
+    updated_at: 2022-10-13 03:25:56.915799+00:00
+    environment: 2d113b21-bf1f-4c74-ba12-e37d8f34b72a
