--- a/runner/.vscode/tasks.json
+++ b/runner/.vscode/tasks.json
@@ -4,15 +4,9 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "listener_stop_container",
+      "label": "runner_stop_container",
       "type": "shell",
-      "command": "docker stop functionary-runner-listener",
-      "hide": true
-    },
-    {
-      "label": "worker_stop_container",
-      "type": "shell",
-      "command": "docker stop functionary-runner-worker",
+      "command": "docker stop functionary-runner",
       "hide": true
     }
   ]
