--- a/functionary/.vscode/tasks.json
+++ b/functionary/.vscode/tasks.json
@@ -4,6 +4,20 @@
   "version": "2.0.0",
   "tasks": [
     {
+      "label": "functionary: apply migrations and load fixtures",
+      "type": "shell",
+      "command": "docker exec functionary-django ./run.sh init",
+      "problemMatcher": [],
+      "dependsOn": "functionary: django up"
+    },
+    {
+      "label": "functionary: django up",
+      "type": "shell",
+      "command": "docker compose -f ../docker/docker-compose.yml up --build -d django",
+      "problemMatcher": [],
+      "hide": true
+    },
+    {
       "label": "runserver_stop_container",
       "type": "shell",
       "command": "docker stop functionary-django",
