--- a/runner/requirements.txt
+++ b/runner/requirements.txt
@@ -52,6 +52,8 @@ redis==4.3.4
     # via celery
 requests==2.28.1
     # via docker
+setproctitle==1.3.2
+    # via -r requirements.in
 six==1.16.0
     # via click-repl
 urllib3==1.26.12
