#91 - Only consume messages if a worker is available, added listener unit tests, removed redis as a broker

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        component: [cli, functionary]
+        component: [cli, functionary, runner]
     name: ${{ matrix.component }}
     steps:
       - uses: actions/checkout@v3
