--- a/runner/requirements-dev.txt
+++ b/runner/requirements-dev.txt
@@ -4,29 +4,53 @@
 #
 #    pip-compile requirements-dev.in
 #
-black==22.8.0
+attrs==22.1.0
+    # via pytest
+black==22.10.0
     # via -r requirements-dev.in
 click==8.1.3
     # via
     #   -c requirements.txt
     #   black
-coverage==6.4.4
+coverage==6.5.0
     # via -r requirements-dev.in
 flake8==5.0.4
     # via -r requirements-dev.in
+iniconfig==1.1.1
+    # via pytest
 isort==5.10.1
     # via -r requirements-dev.in
 mccabe==0.7.0
     # via flake8
 mypy-extensions==0.4.3
     # via black
+packaging==21.3
+    # via
+    #   -c requirements.txt
+    #   pytest
 pathspec==0.10.1
     # via black
 platformdirs==2.5.2
     # via black
+pluggy==1.0.0
+    # via pytest
+py==1.11.0
+    # via pytest
 pycodestyle==2.9.1
     # via flake8
 pyflakes==2.5.0
     # via flake8
+pyparsing==3.0.9
+    # via
+    #   -c requirements.txt
+    #   packaging
+pytest==7.1.3
+    # via
+    #   -r requirements-dev.in
+    #   pytest-mock
+pytest-mock==3.10.0
+    # via -r requirements-dev.in
 tomli==2.0.1
-    # via black
+    # via
+    #   black
+    #   pytest
