--- a/functionary/requirements.txt
+++ b/functionary/requirements.txt
@@ -19,7 +19,9 @@ billiard==3.6.4.0
 cachetools==4.2.4
     # via django-unicorn
 celery==5.2.7
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   django-celery-beat
 certifi==2022.9.24
     # via requests
 charset-normalizer==2.1.1
@@ -43,10 +45,15 @@ deprecated==1.2.13
 django==4.1.1
     # via
     #   -r requirements.in
+    #   django-celery-beat
     #   django-unicorn
     #   djangorestframework
     #   drf-spectacular
     #   drf-spectacular-sidecar
+django-celery-beat==2.4.0
+    # via -r requirements.in
+django-timezone-field==5.0
+    # via django-celery-beat
 django-unicorn==0.48.0
     # via -r requirements.in
 djangorestframework==3.14.0
@@ -75,11 +82,11 @@ packaging==21.3
     # via
     #   docker
     #   redis
-pika==1.3.0
+pika==1.3.1
     # via -r requirements.in
 prompt-toolkit==3.0.31
     # via click-repl
-psycopg2==2.9.3
+psycopg2==2.9.4
     # via -r requirements.in
 pydantic==1.10.2
     # via -r requirements.in
@@ -87,9 +94,14 @@ pyparsing==3.0.9
     # via packaging
 pyrsistent==0.18.1
     # via jsonschema
-pytz==2022.4
+python-crontab==2.6.0
+    # via django-celery-beat
+python-dateutil==2.8.2
+    # via python-crontab
+pytz==2022.5
     # via
     #   celery
+    #   django-timezone-field
     #   djangorestframework
 pyyaml==6.0
     # via
@@ -102,13 +114,17 @@ requests==2.28.1
 shortuuid==1.0.9
     # via django-unicorn
 six==1.16.0
-    # via click-repl
+    # via
+    #   click-repl
+    #   python-dateutil
 soupsieve==2.3.2.post1
     # via beautifulsoup4
 sqlparse==0.4.3
     # via django
-typing-extensions==4.3.0
+typing-extensions==4.4.0
     # via pydantic
+tzdata==2022.5
+    # via django-celery-beat
 uritemplate==4.1.1
     # via drf-spectacular
 urllib3==1.26.12
