--- a/functionary/requirements.txt
+++ b/functionary/requirements.txt
@@ -19,7 +19,9 @@ billiard==3.6.4.0
 cachetools==4.2.4
     # via django-unicorn
 celery==5.2.7
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   django-celery-beat
 certifi==2022.9.24
     # via requests
 charset-normalizer==2.1.1
@@ -40,56 +42,66 @@ decorator==4.4.2
     # via django-unicorn
 deprecated==1.2.13
     # via redis
-django==4.1.1
+django==4.1.3
     # via
     #   -r requirements.in
+    #   django-celery-beat
     #   django-unicorn
     #   djangorestframework
     #   drf-spectacular
     #   drf-spectacular-sidecar
+django-celery-beat==2.4.0
+    # via -r requirements.in
+django-timezone-field==5.0
+    # via django-celery-beat
 django-unicorn==0.48.0
     # via -r requirements.in
 djangorestframework==3.14.0
     # via
     #   -r requirements.in
     #   drf-spectacular
-docker==6.0.0
+docker==6.0.1
     # via -r requirements.in
 drf-spectacular[sidecar]==0.24.2
     # via -r requirements.in
-drf-spectacular-sidecar==2022.10.1
+drf-spectacular-sidecar==2022.11.1
     # via drf-spectacular
 idna==3.4
     # via requests
 inflection==0.5.1
     # via drf-spectacular
-jsonschema==4.16.0
+jsonschema==4.17.0
     # via
     #   -r requirements.in
     #   drf-spectacular
 kombu==5.2.4
     # via celery
-orjson==3.8.0
+orjson==3.8.1
     # via django-unicorn
 packaging==21.3
     # via
     #   docker
     #   redis
-pika==1.3.0
+pika==1.3.1
     # via -r requirements.in
-prompt-toolkit==3.0.31
+prompt-toolkit==3.0.32
     # via click-repl
-psycopg2==2.9.3
+psycopg2==2.9.5
     # via -r requirements.in
 pydantic==1.10.2
     # via -r requirements.in
 pyparsing==3.0.9
     # via packaging
-pyrsistent==0.18.1
+pyrsistent==0.19.2
     # via jsonschema
-pytz==2022.4
+python-crontab==2.6.0
+    # via django-celery-beat
+python-dateutil==2.8.2
+    # via python-crontab
+pytz==2022.6
     # via
     #   celery
+    #   django-timezone-field
     #   djangorestframework
 pyyaml==6.0
     # via
@@ -102,13 +114,17 @@ requests==2.28.1
 shortuuid==1.0.9
     # via django-unicorn
 six==1.16.0
-    # via click-repl
+    # via
+    #   click-repl
+    #   python-dateutil
 soupsieve==2.3.2.post1
     # via beautifulsoup4
 sqlparse==0.4.3
     # via django
-typing-extensions==4.3.0
+typing-extensions==4.4.0
     # via pydantic
+tzdata==2022.6
+    # via django-celery-beat
 uritemplate==4.1.1
     # via drf-spectacular
 urllib3==1.26.12
@@ -122,7 +138,7 @@ vine==5.0.0
     #   kombu
 wcwidth==0.2.5
     # via prompt-toolkit
-websocket-client==1.4.1
+websocket-client==1.4.2
     # via docker
 wrapt==1.14.1
     # via deprecated
