#128 - Fix issue tasking functions with no parameters (#132)

--- a/examples/demo/package.yaml
+++ b/examples/demo/package.yaml
@@ -49,9 +49,7 @@ package:
       description:
         Displays all the environment variables that are available to the
         function at runtime
-      variables: [HOME, USER]
-      parameters:
-        - name: dummy
-          summary: Not used
-          type: string
-          required: false
+      variables:
+        - HOME
+        - USER
+      parameters: []
