--- a/functionary/requirements.txt
+++ b/functionary/requirements.txt
@@ -46,15 +46,20 @@ django==4.1.3
     # via
     #   -r requirements.in
     #   django-celery-beat
+    #   django-htmx
     #   django-unicorn
     #   djangorestframework
     #   drf-spectacular
     #   drf-spectacular-sidecar
 django-celery-beat==2.4.0
     # via -r requirements.in
+django-htmx==1.13.0
+    # via -r requirements.in
 django-timezone-field==5.0
     # via django-celery-beat
-django-unicorn==0.48.0
+django-unicorn==0.49.2
+    # via -r requirements.in
+django-widget-tweaks==1.4.12
     # via -r requirements.in
 djangorestframework==3.14.0
     # via
@@ -111,7 +116,7 @@ redis==4.3.4
     # via -r requirements.in
 requests==2.28.1
     # via docker
-shortuuid==1.0.9
+shortuuid==1.0.11
     # via django-unicorn
 six==1.16.0
     # via
