--- a/functionary/setup.cfg
+++ b/functionary/setup.cfg
@@ -5,6 +5,7 @@ exclude = **/migrations/*
 [isort]
 profile = black
 known_first_party = builder, core, scheduler
+skip_glob = **/migrations/*
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = functionary.settings.test
