--- a/functionary/requirements.txt
+++ b/functionary/requirements.txt
@@ -109,6 +109,8 @@ six==1.16.0
     #   python-dateutil
 sqlparse==0.4.3
     # via django
+thefuzz==0.19.0
+    # via -r requirements.in
 typing-extensions==4.4.0
     # via pydantic
 tzdata==2022.6
