--- a/functionary/requirements.txt
+++ b/functionary/requirements.txt
@@ -113,6 +113,7 @@ pyyaml==6.0
     #   -r requirements.in
     #   drf-spectacular
 redis==4.4.0
+rapidfuzz==2.13.7
     # via -r requirements.in
 requests==2.28.1
     # via
