--- a/functionary/requirements.txt
+++ b/functionary/requirements.txt
@@ -45,6 +45,7 @@ django==4.1.4
     #   -r requirements.in
     #   django-allauth
     #   django-celery-beat
+    #   django-filter
     #   django-htmx
     #   djangorestframework
     #   drf-spectacular
@@ -52,6 +53,8 @@ django==4.1.4
 django-allauth==0.51.0
     # via -r requirements.in
 django-celery-beat==2.4.0
+    # via -r requirements.in
+django-filter==22.1
     # via -r requirements.in
 django-htmx==1.13.0
     # via -r requirements.in
@@ -112,8 +115,9 @@ pyyaml==6.0
     # via
     #   -r requirements.in
     #   drf-spectacular
-redis==4.4.0
 rapidfuzz==2.13.7
+    # via -r requirements.in
+redis==4.4.0
     # via -r requirements.in
 requests==2.28.1
     # via
