--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,10 @@ ipython_config.py
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
 
+# Django Migrations
+functionary/core/migrations/*.py
+functionary/builder/migrations/*.py
+
 # Celery stuff
 celerybeat-schedule
 celerybeat.pid
