--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,5 +33,7 @@ jobs:
         run:
           python -m pip install -r ${{ matrix.component }}/requirements.txt -r
           ${{ matrix.component }}/requirements-dev.txt
+      - name: make migrations
+        run: python functionary/manage.py makemigrations
       - name: run tests
         run: pytest ${{ matrix.component }}/
