--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,7 +34,7 @@ jobs:
           python -m pip install -r ${{ matrix.component }}/requirements.txt -r
           ${{ matrix.component }}/requirements-dev.txt
       - name: make migrations
-        if: ${{ matrix.component == functionary }}
+        if: ${{ matrix.component == 'functionary' }}
         run: python functionary/manage.py makemigrations
       - name: run tests
         run: pytest ${{ matrix.component }}/
