--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,6 +17,10 @@ x-environment:
   DB_USER: admin
   DB_PASSWORD: password
   DB_PORT: 5432
+  MINIO_HOST: minio
+  MINIO_PORT: 9000
+  MINIO_ROOT_USER: ROOTUSER
+  MINIO_ROOT_PASSWORD: CHANGEME123
 
 services:
   django:
@@ -179,6 +183,20 @@ services:
       - 5000:5000
     volumes:
       - registry-data:/var/lib/registry
+  minio:
+    image: quay.io/minio/minio:RELEASE.2023-01-25T00-19-54Z
+    container_name: functionary-s3
+    command: server /data --console-address ":9090"
+    hostname: minio
+    environment:
+      <<: *environment
+    networks:
+      - functionary-network
+    ports:
+      - 9000:9000
+      - 9090:9090
+    volumes:
+      - file-data:/data
 
 networks:
   functionary-network:
@@ -189,3 +207,4 @@ volumes:
   rabbitmq-data:
   registry-data:
   postgresql-data:
+  file-data:
