--- a/functionary/requirements.txt
+++ b/functionary/requirements.txt
@@ -19,7 +19,9 @@ celery==5.2.7
     #   -r requirements.in
     #   django-celery-beat
 certifi==2022.12.7
-    # via requests
+    # via
+    #   minio
+    #   requests
 cffi==1.15.1
     # via cryptography
 charset-normalizer==3.0.1
@@ -84,6 +86,8 @@ jsonschema==4.17.3
     #   drf-spectacular
 kombu==5.2.4
     # via celery
+minio==7.1.13
+    # via -r requirements.in
 oauthlib==3.2.2
     # via requests-oauthlib
 packaging==23.0
@@ -142,6 +146,7 @@ uritemplate==4.1.1
 urllib3==1.26.14
     # via
     #   docker
+    #   minio
     #   requests
 vine==5.0.0
     # via
