--- a/functionary/.vscode/tasks.json
+++ b/functionary/.vscode/tasks.json
@@ -7,15 +7,7 @@
       "label": "functionary: apply migrations and load fixtures",
       "type": "shell",
       "command": "docker exec functionary-django ./run.sh init",
-      "problemMatcher": [],
-      "dependsOn": "functionary: django up"
-    },
-    {
-      "label": "functionary: django up",
-      "type": "shell",
-      "command": "docker compose -f ../docker/docker-compose.yml up --build -d django",
-      "problemMatcher": [],
-      "hide": true
+      "problemMatcher": []
     },
     {
       "label": "runserver_stop_container",
