#144 - Implemented PR comments

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,7 +3,6 @@ version: "3.5"
 x-environment:
   &environment
   DEBUG: TRUE
-  BROKER_WORKDIR: /tmp
   DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY:-supersecret}
   DJANGO_SETTINGS_MODULE: functionary.settings.debug
   LOG_LEVEL: DEBUG
@@ -17,6 +16,7 @@ x-environment:
   DB_USER: admin
   DB_PASSWORD: password
   DB_PORT: 5432
+  FUNCTIONARY_NETWORK: functionary-network
   MINIO_HOST: minio
   MINIO_PORT: 9000
   MINIO_ROOT_USER: ROOTUSER
