Updates to debugging setup to work with minio (#202)

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,14 +16,14 @@ x-environment:
   DB_USER: admin
   DB_PASSWORD: password
   DB_PORT: 5432
-  FUNCTIONARY_NETWORK: functionary-network  # Mutually exclusive with NETWORK_MODE
+  FUNCTIONARY_NETWORK: functionary-network # Mutually exclusive with NETWORK_MODE
   FUNCTIONARY_NETWORK_MODE:
   S3_HOST: minio
   S3_PORT: 9000
   S3_REGION:
   S3_SECURE: false
-  MINIO_ROOT_USER: ROOTUSER
-  MINIO_ROOT_PASSWORD: CHANGEME123
+  S3_ACCESS_KEY: ROOTUSER
+  S3_SECRET_KEY: CHANGEME123
 
 services:
   django:
@@ -193,6 +193,8 @@ services:
     hostname: minio
     environment:
       <<: *environment
+      MINIO_ROOT_USER: ROOTUSER
+      MINIO_ROOT_PASSWORD: CHANGEME123
     networks:
       - functionary-network
     ports:
