#197 - centralized table rendering logic (#207)

--- a/functionary/requirements.in
+++ b/functionary/requirements.in
@@ -5,6 +5,7 @@ django-celery-beat
 django-constance
 django-constance[database]
 django-htmx
+django-tables2
 django-widget-tweaks
 docker
 jsonschema
