--- a/functionary/requirements.in
+++ b/functionary/requirements.in
@@ -5,6 +5,7 @@ django-celery-beat
 django-constance
 django-constance[database]
 django-htmx
+django-filter
 django-tables2
 django-widget-tweaks
 docker
